# mcp-server-box

./: Dockerfile  README.md  pyproject.toml
docs/: box_tools_ai.md  box_tools_files.md
src/: config.py  mcp_server_box.py  middleware.py  server.py
src/mcp_auth/: auth_box.py  auth_token.py
src/tool_registry/: __init__.py  ai_tools.py  file_tools.py  file_transfer_tools.py  shared_link_tools.py
src/tools/: box_tools_ai.py  box_tools_file.py  box_tools_file_transfer.py  prompts.py
tests/: test_box_tools_file_transfers.py  test_box_tools_files.py  test_request_header_handling.py  test_tool_filtering.py  test_tool_group_filtering.py
